changing color of text to red

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <section class="container">
                 <div class="cta">
                     <h1>The first video marketplace</h1>
-                    <p>The first marketplace which allows users to buy and sell premium original video content.
+                    <p class="red">The first marketplace which allows users to buy and sell premium original video content.
                        Watch the best from TV, Music, Courses and Individual Creators - completely FREE to sign up!</p>
                 </div>
                 <figure class="iphone">
