adding fake text

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <h1>The first video marketplace</h1>
                     <p class="red">The first marketplace which allows users to buy and sell premium original video content.
                        Watch the best from TV, Music, Courses and Individual Creators - completely FREE to sign up!</p>
+                    <p>This is q new text</p>
                 </div>
                 <figure class="iphone">
                     <img class="mockup" src="./img/iphone.png">
