adding blue text

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="main">
             <section class="container">
                 <div class="cta">
+                    <h1 class="blue">This is dev branch</h1>
                     <h1>The first video marketplace</h1>
                     <p>The first marketplace which allows users to buy and sell premium original video content.
                        Watch the best from TV, Music, Courses and Individual Creators - completely FREE to sign up!</p>
