--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </nav>
         </header>
         <div class="main">
-            <section class="container">
+            <section id="cta-main" class="container">
                 <div class="cta">
                     <h1 class="blue">This is dev branch</h1>
                     <h1>The first video marketplace</h1>
@@ -32,6 +32,52 @@
                     <img class="mockup" src="./img/iphone.png">
                 </figure>
             </section>
+            <section>
+                <div>
+                    <div>Benefits</div>
+                </div>
+                <div>
+                    <div>
+                        <div>icon</div>
+                        <div>benefit title</div>
+                        <div>dummy text explaining the benefits </div>
+                    </div>
+                    <div>
+                        <div>icon</div>
+                        <div>benefit title</div>
+                        <div>dummy text explaining the benefits </div>
+                    </div>
+                    <div>
+                        <div>icon</div>
+                        <div>benefit title</div>
+                        <div>dummy text explaining the benefits </div>
+                    </div>
+                </div>
+            </section>
+           <section id="features">
+               <div>
+                   <div>imgage</div>
+                   <div>
+                       <div>text with a pink color</div>
+                       <div>h1 bold text with features name</div>
+                       <div>
+                           <p>paragraph explaing what is the feature for</p>
+                           <p>paragraph describing the feature</p>
+                       </div>
+                   </div>
+               </div>
+               <div>
+                   <div>
+                       <div>text with a pink color</div>
+                       <div>h1 bold text with features name</div>
+                       <div>
+                           <p>paragraph explaing what is the feature for</p>
+                           <p>paragraph describing the feature </p>
+                       </div>
+                   </div>
+                   <div>imgage</div>
+               </div>
+           </section>
 
          </div>   
          <footer>
