--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-
         
         <header id="header"> 
                 <div><img src="./img/Weird Shape-Vima.svg" id="wave"></div>
@@ -25,12 +24,12 @@
         <div class="main">
             <section id="cta-wrapper">
                 <div class="cta-container-left">
-                    <h1 class="cta-title">Lorem ipsum dolor </h1>
-                    <p class="cta-paragraph">The first marketplace which allows users to buy and sell premium original video content.
-                       Watch the best from TV, Music, Courses and Individual Creators - completely FREE to sign up!</p>
+                    <h1 class="cta-title">Lorem ipsum dolor sit amet consectetur</h1>
+                    <p class="cta-paragraph">Laudantium nemo deserunt officiis, saepe voluptas quibusdam ipsam accusamus quisquam exercitationem?</p>
+                    <button class="cta-button" type="button">Submit</button>
                 </div>
                 <div class="cta-container-right">
-                    <figure><img class="iphone" src="./img/iphone.png"></figure>
+                    <figure><img class="iphone" srcset="./img/iphone.png 2x" alt="…"></figure>
                 </div>
             </section>
             <section id="benefits">
@@ -39,23 +38,23 @@
                 </div>
                 <div class="benefits-wrapper">
                     <div class="benefit-container">
-                        <div><img class="icon" src="./img/badge.png"></div>
+                        <div class="icon-container"><img class="icon" src="./img/icon.png"></div>
                         <div class="benefit-title">Premium content</div>
                         <div class="benefit-text">dummy text explaining the benefits </div>
                     </div>
                     <div class="benefit-container">
-                        <div><img class="icon" src="./img/coin.png"></div>
+                        <div class="icon-container"><img class="icon" src="./img/icon.png"></div>
                         <div class="benefit-title">Pay per view</div>
                         <div class="benefit-text">dummy text explaining the benefits </div>
                     </div>
                     <div class="benefit-container">
-                        <div><img class="icon" src="./img/user.png"></div>
+                        <div class="icon-container"><img class="icon" src="./img/icon.png"></div>
                         <div class="benefit-title">Content creators</div>
                         <div class="benefit-text">dummy text explaining the benefits </div>
                     </div>
                 </div>
             </section>
-           <section id="feature-1">
+           <section id="feature">
                <div class="features-wrapper">
                    <div class="image-wrapper"><img class="feature-image-right" src="./img/146.jpg"></div>
                    <div  class="feature-container-left">
@@ -67,19 +66,6 @@
                    </div>
                </div>
             </section>
-            <section id="feature-2">
-               <div class="features-wrapper">
-                   <div class="feature-container-right">  
-                       <div class="feature-title">Another feature title</div>
-                       <div class="feature-text">
-                           <p>paragraph explaing what is the feature for</p>
-                           <p>paragraph describing the feature </p>
-                       </div>
-                   </div>
-                   <div class="image-wrapper"><img class="feature-image-left" src="./img/untitled-3-01.jpg"></div>
-               </div>
-           </section>
-
          </div>   
          <footer id="footer-wrapper">
              <div class="text-wrapper">
