Last bootstrap version

--- a/index.html
+++ b/index.html
@@ -22,48 +22,46 @@
                 </ul>
             </nav>
             </header>
-            <div class="row mt-3 justify-content-center">
-                <div class="col-sm-5">
+            <div class="row justify-content-center my-5">
+                <div class="col-sm-5 d-flex align-content-center flex-wrap">
                     <h1 class="cta-title">Lorem ipsum dolor sit amet consectetur</h1>
                     <p class="cta-paragraph">Laudantium nemo deserunt officiis, saepe voluptas quibusdam ipsam accusamus quisquam exercitationem?</p>
                     <button class="cta-button" type="button">Submit</button>
                 </div>
-                <div class="col-sm-5">
+                <div class="col-sm-5 d-flex align-self-center">
                     <figure><img class="iphone" srcset="./img/iphone.png 2x" alt="…"></figure>
                 </div>
             </div>
-            <div class="row justify-content-center" >
+            <div class="row justify-content-center my-5 py-1" >
                 <div>
-                    <h2>Benefits</h2>
+                    <h2 class="benefits">Benefits</h2>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-sm-3 benefit-container">
+            <div class="row justify-content-center my-5">
+                <div class="col-sm-3 d-flex flex-column m-auto pb-4 benefit-container">
                     <div class="icon-container"><img class="icon" src="./img/icon.png"></div>
                     <div class="benefit-title">Premium content</div>
                     <div class="benefit-text">dummy text explaining the benefits </div>
                 </div>
-                <div class="col-sm-3 benefit-container">
+                <div class="col-sm-3 d-flex flex-column m-auto pb-4 benefit-container">
                     <div class="icon-container"><img class="icon" src="./img/icon.png"></div>
                     <div class="benefit-title">Pay per view</div>
                     <div class="benefit-text">dummy text explaining the benefits </div>
                 </div>
-                <div class="col-sm-3 benefit-container">
+                <div class="col-sm-3 d-flex flex-column m-auto pb-4 benefit-container">
                     <div class="icon-container"><img class="icon" src="./img/icon.png"></div>
                     <div class="benefit-title">Content creators</div>
                     <div class="benefit-text">dummy text explaining the benefits </div>
                 </div>
             </div>
-            <div class="row justify-content-center">
+            <div class="row justify-content-center my-5">
                 <div class="col-4">
-                    <img class="feature-image-right" src="./img/146.jpg">
+                    <img class="d-flex align-self-center feature-image-right" src="./img/146.jpg">
                 </div>
-                <div class="col-6">
-                    <div class="feature-title">Discover independant film</div>
-                       <div class="feature-text">
-                           <p>paragraph explaing what is the feature for</p>
-                           <p>paragraph describing the feature</p>
-                       </div>
+                <div class="col-6 d-flex justify-content-end align-content-center flex-wrap">
+                    <h2 class="feature-title">Discover independant film</h2>
+                    <p class="feature-text">paragraph explaing what is the feature for</p>
+                    <p class="feature-text">paragraph describing the feature</p>  
                 </div>
             </div>
             <footer class="footer mt-auto py-3">
