Linking social media

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/reset.css">
 		<link rel="stylesheet" href="./css/styles.css">
-				
+		<script src="./new-js/jquery-3.4.1.min.js"></script>	
     </head>
     <body> 
         <header id="header">
@@ -115,14 +115,15 @@
 									<hr class="borderight">
 									<p class="feature-text">Join today and start curating your own channels</p>
 									<div class="buttoncontainer">
-									<button class="submit" type="button">Join now</button>
+										<a  class="submit scrollToTop" type="button" href="#header" >Join Now</a>
+									
 									</div>
 								</div> 
 						</section>
 						<div class="wavewrapper">
 								<svg id="wavy"  viewBox="0 0 1920 450" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-									<g id="Landing-page" transform="translate(0.000000, -4325.000000)" fill="#ee858c">
-											<g id="Get-a-quotation" transform="translate(-301.000000, 4325.000000)">
+									<g  transform="translate(0.000000, -4325.000000)" fill="#ee858c">
+											<g transform="translate(-301.000000, 4325.000000)">
 													<path fill="#ee858c" d="M218.162393,93.2510709 C240.505113,1.9712505 347.469448,-21.6639384 482.999124,19.5684333 C618.528799,60.8008049 581.556163,196.389203 720.154562,215.644931 C858.752962,234.900659 821.117226,150.780558 922.499456,139.794046 C1023.88169,128.807533 1019.14017,206.03491 1176.06356,188.67797 C1332.98695,171.321031 1359.13392,61.0192426 1566.92164,68.0483348 C1774.70936,75.0774269 1866.4913,174.077204 1973.23668,215.644931 C2044.40026,243.356749 2134.36765,218.07312 2243.13883,139.794046 C2616.28706,559.731716 2616.28706,876.578902 2243.13883,1090.3356 C1683.4165,1410.97065 674.401843,1368.56248 209.383995,1090.3356 C-255.633853,812.108725 195.819673,184.530891 218.162393,93.2510709 Z" id="Path-2"></path>
 											</g>
 									</g>
@@ -134,9 +135,15 @@
 						<div class="text-wrapper">
 								<p class="footer-text">Get in touch. Say Hello!</p>
 							<div class="some-wrapper">
-								<div class="some-container"><img  class="some" src="./img/instagram.png"></div>
-								<div class="some-container"><img  class="some" src="./img/facebook.png"></div>
-								<div class="some-container"><img  class="some" src="./img/twitter.png"></div>
+								<div class="some-container"> 
+									<a href="https://www.instagram.com/vima.co/" target="_blank"><img  class="some" src="./img/instagram.png"></a>
+								</div>
+								<div class="some-container">
+									<a href="https://www.facebook.com/vimaapp" target="_blank"><img  class="some" src="./img/facebook.png"></a>
+								</div>
+								<div class="some-container">
+									<a href="https://twitter.com/vima_co" target="_blank"><img  class="some" src="./img/twitter.png"></a>
+								</div>
 							</div>
 						</div>
 				</footer>
